Policy Cilium l7/checkout-policy-lv7.yaml
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
metadata:
  name: "rule-ckout-lv7"
spec:
  description: "L7 policy for the checkoutservice"
  endpointSelector:
    matchLabels:
      app: checkoutservice
  ingress:
  - fromEndpoints:
    - matchLabels:
        app: frontend
    toPorts:
    - ports:
      - port: "5050"
        protocol: TCP
      rules:
        http:
        - method: "POST"
          path: "/hipstershop.CheckoutService/PlaceOrder"
  egress:
  - toEndpoints:
    - matchLabels:
        app: productcatalogservice
    toPorts:
    - ports:
      - port: "3550"
        protocol: TCP
      rules:
        http:
        - method: "POST"
          path: "/hipstershop.ProductCatalogService/GetProduct"
  - toEndpoints:
    - matchLabels:
        app: currencyservice
    toPorts:
    - ports:
      - port: "7000"
        protocol: TCP
      rules:
        http:
        - method: "POST"
          path: "/grpc.health.v1.Health/Check"
        - method: "POST"
          path: "/hipstershop.CurrencyService/Convert"
  - toEndpoints:
    - matchLabels:
        app: emailservice
    toPorts:
    - ports:
      - port: "8080"
        protocol: TCP
      rules:
        http:
        - method: "POST"
          path: "/hipstershop.EmailService/SendOrderConfirmation"
  - toEndpoints:
    - matchLabels:
        app: shippingservice
    toPorts:
    - ports:
      - port: "50051"
        protocol: TCP
      rules:
        http:
        - method: "POST"
          path: "/hipstershop.ShippingService/GetQuote"  
        - method: "POST"
          path: "/hipstershop.ShippingService/ShipOrder"
  - toEndpoints:
    - matchLabels:
        app: paymentservice
    toPorts:
    - ports:
      - port: "50051"
        protocol: TCP
      rules:
        http:
        - method: "POST"
          path: "/hipstershop.PaymentService/Charge"
  - toEndpoints:
    - matchLabels:
        app: cartservice
    toPorts:
    - ports:
      - port: "7070"
        protocol: TCP
      rules:
        http:
        - method: "POST"
          path: "/hipstershop.CartService/GetCart"
        - method: "POST"
          path: "/hipstershop.CartService/EmptyCart"
  - toEndpoints:
    - matchLabels:
        "k8s:io.kubernetes.pod.namespace": kube-system
        "k8s:k8s-app": kube-dns
    toPorts:
    - ports:
      - port: "53"
        protocol: ANY
      rules:
        dns:
        - matchPattern: "*.default.svc.cluster.local"
