Policy Cilium l7/recommendation-policy-lv7.yaml
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
metadata:
  name: "rule-rec-lv7"
spec:
  description: "L7 policy for the recommandation service"
  endpointSelector:
    matchLabels:
      app: recommendationservice
  ingress:
  - fromEndpoints:
    - matchLabels:
        app: frontend
    toPorts:
    - ports:
      - port: "8080"
        protocol: TCP
      rules:
        http:
        - method: "POST"
          path: "/hipstershop.RecommendationService/ListRecommendations"    
  egress:
  - toEndpoints:
    - matchLabels:
        app: productcatalogservice
    toPorts:
    - ports:
      - port: "3550"
        protocol: TCP
      rules:
        http:
        - method: "POST"
          path: "/hipstershop.ProductCatalogService/ListProducts"
  - toEndpoints:
    - matchLabels:
        "k8s:io.kubernetes.pod.namespace": kube-system
        "k8s:k8s-app": kube-dns
    toPorts:
    - ports:
      - port: "53"
        protocol: ANY
      rules:
        dns:
        - matchPattern: "*.default.svc.cluster.local"
